[gd_scene load_steps=7 format=3 uid="uid://cj0ltns8pwsyf"]

[ext_resource type="Script" uid="uid://dlrkgvhgqvf5" path="res://projectile_scenes_scripts/skill_two.gd" id="1_dlpl5"]
[ext_resource type="Texture2D" uid="uid://cmjhndriq6dmb" path="res://graphics/Projectiles/bucko_skill2-sheet.png" id="2_dlpl5"]
[ext_resource type="AudioStream" uid="uid://c3vcbf7k0ptfb" path="res://graphics/Audio/thud-291047.mp3" id="3_30sff"]

[sub_resource type="Animation" id="Animation_30sff"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dlpl5"]
resource_name = "slam"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.3, 0.433333, 0.833333, 1.03333, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.3, 0.433333, 0.833333, 1.03333, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"values": [{
"args": [0],
"method": &"match_poly"
}, {
"args": [1],
"method": &"match_poly"
}, {
"args": [2],
"method": &"match_poly"
}, {
"args": [3],
"method": &"match_poly"
}, {
"args": [3],
"method": &"match_poly"
}, {
"args": [2],
"method": &"match_poly"
}, {
"args": [1],
"method": &"match_poly"
}, {
"args": [0],
"method": &"match_poly"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.5, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sbai5"]
_data = {
&"RESET": SubResource("Animation_30sff"),
&"slam": SubResource("Animation_dlpl5")
}

[node name="SkillTwo" type="Area2D" node_paths=PackedStringArray("fall_sfx") groups=["player_projectiles"]]
collision_layer = 4
collision_mask = 128
script = ExtResource("1_dlpl5")
fall_sfx = NodePath("AudioStreamPlayer")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1.19209e-07, 0)
scale = Vector2(1.47656, 1.36719)
texture = ExtResource("2_dlpl5")
hframes = 8
region_rect = Rect2(50, 50, 0, 0)

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(1, 1, 1, 0)
polygon = PackedVector2Array(-19, -24, -12, -28, -4, -29, 10, -28, 20, -23, 28, -19, 36, -22, 40, -15, 41, -3, 38, 10, 33, 18, -29, 19, -35, 15, -41, 4, -40, -15, -34, -21, -27, -19, -23, -22)
metadata/_edit_lock_ = true

[node name="Polygon2D2" type="Polygon2D" parent="."]
position = Vector2(1, 0)
color = Color(1, 1, 1, 0)
polygon = PackedVector2Array(-56, -20, -37, -36, -2, -45, 36, -35, 57, -14, 59, 1, 44, 24, 30, 32, 12, 35, -16, 37, -36, 30, -54, 13, -60, -5)

[node name="Polygon2D3" type="Polygon2D" parent="."]
color = Color(1, 1, 1, 0)
polygon = PackedVector2Array(-28, -52, 28, -51, 55, -36, 66, -27, 74, -3, 68, 21, 49, 34, 34, 42, 1, 48, -34, 42, -53, 33, -70, 18, -73, -4, -67, -29)

[node name="Polygon2D4" type="Polygon2D" parent="."]
color = Color(1, 1, 1, 0)
polygon = PackedVector2Array(-13, -67, 12, -66, 44, -59, 74, -36, 84, -16, 86, 18, 71, 36, 39, 58, -2, 60, -38, 58, -71, 37, -85, 17, -84, -17, -74, -37, -41, -60)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sbai5")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_30sff")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
